crates/ruff_python_trivia/src/snapshots/ruff_python_trivia__tokenizer__tests__comment_containing_single_quoted_string.snap
---
source: crates/ruff_python_trivia/src/tokenizer.rs
expression: test_case.tokenize_reverse()
---
[
    SimpleToken {
        kind: Comment,
        range: 17..43,
    },
    SimpleToken {
        kind: Whitespace,
        range: 16..17,
    },
    SimpleToken {
        kind: Other,
        range: 15..16,
    },
    SimpleToken {
        kind: Bogus,
        range: 0..15,
    },
]
