crates/ruff_python_trivia/src/snapshots/ruff_python_trivia__tokenizer__tests__comment_containing_triple_quoted_string.snap
---
source: crates/ruff_python_trivia/src/tokenizer.rs
expression: test_case.tokenize_reverse()
---
[
    SimpleToken {
        kind: Comment,
        range: 21..51,
    },
    SimpleToken {
        kind: Whitespace,
        range: 20..21,
    },
    SimpleToken {
        kind: Other,
        range: 19..20,
    },
    SimpleToken {
        kind: Bogus,
        range: 0..19,
    },
]
