crates/ruff_python_trivia/src/snapshots/ruff_python_trivia__tokenizer__tests__empty_string_literal.snap
---
source: crates/ruff_python_trivia/src/tokenizer.rs
expression: test_case.tokenize_reverse()
---
[
    SimpleToken {
        kind: Comment,
        range: 3..16,
    },
    SimpleToken {
        kind: Whitespace,
        range: 2..3,
    },
    SimpleToken {
        kind: Other,
        range: 1..2,
    },
    SimpleToken {
        kind: Bogus,
        range: 0..1,
    },
]
