crates/ruff_python_trivia/src/snapshots/ruff_python_trivia__tokenizer__tests__identifier_starting_with_string_kind.snap
---
source: crates/ruff_python_trivia/src/tokenizer.rs
expression: test_case.tokens()
---
[
    SimpleToken {
        kind: Name,
        range: 0..3,
    },
    SimpleToken {
        kind: Whitespace,
        range: 3..4,
    },
    SimpleToken {
        kind: Name,
        range: 4..7,
    },
]
