crates/ruff_python_trivia/src/snapshots/ruff_python_trivia__tokenizer__tests__string_followed_by_multiple_comments.snap
---
source: crates/ruff_python_trivia/src/tokenizer.rs
expression: test_case.tokenize_reverse()
---
[
    SimpleToken {
        kind: Comment,
        range: 53..72,
    },
    SimpleToken {
        kind: Whitespace,
        range: 52..53,
    },
    SimpleToken {
        kind: Other,
        range: 51..52,
    },
    SimpleToken {
        kind: Bogus,
        range: 0..51,
    },
]
