crates/ruff_python_trivia/src/snapshots/ruff_python_trivia__tokenizer__tests__string_with_byte_kind.snap
---
source: crates/ruff_python_trivia/src/tokenizer.rs
expression: test_case.tokens()
---
[
    SimpleToken {
        kind: Other,
        range: 0..2,
    },
    SimpleToken {
        kind: Bogus,
        range: 2..7,
    },
]
